force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Customer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party  Customer Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>