force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_eKYC_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_eKYC_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party eKYC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>