force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Party_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Email Address</label>
    <length>90</length>
    <type>Text</type>
</CustomField>