force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>