force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Party_GST_Applicable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party GST Applicable</label>
    <length>5</length>
    <type>Text</type>
</CustomField>