force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Last Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>