force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Middle Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>