force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>