force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Phn_Code__c.field-meta.xml
<CustomField>
    <fullName>Party_Phn_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Phn Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>