force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Party_Standard_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Standard Reason</label>
    <length>60</length>
    <type>Text</type>
</CustomField>