force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_TSM_OLM__c.field-meta.xml
<CustomField>
    <fullName>Party_TSM_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party TSM OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>