force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/PO_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>PO_Mandatory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Mandatory</label>
    <length>15</length>
    <type>Text</type>
</CustomField>