force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Premises_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Premises_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises Lookup</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>ARTL_DataMigrationStagings</relationshipLabel>
    <relationshipName>ARTL_DataMigrationStagings</relationshipName>
    <type>Lookup</type>
</CustomField>