force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>