force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Project_Manager_OLM__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Manager OLM</label>
    <length>16</length>
    <type>Text</type>
</CustomField>