force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Project_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Manager Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>