force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>15</length>
    <type>Text</type>
</CustomField>