force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Resident_Engineer_1_OLM__c.field-meta.xml
<CustomField>
    <fullName>Resident_Engineer_1_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resident Engineer 1 OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>