force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsibility</label>
    <length>30</length>
    <type>Text</type>
</CustomField>