force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/SAM_Id__c.field-meta.xml
<CustomField>
    <fullName>SAM_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>