force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Secondary_KAM_2_OLM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_KAM_2_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary KAM 2 OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>