force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Secops_Flag__c.field-meta.xml
<CustomField>
    <fullName>Secops_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secops Flag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>