force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Service_Segment__c.field-meta.xml
<CustomField>
    <fullName>Service_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>