force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/SFDC_Account__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDC Account #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>