force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/SFDC_eCRM_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_eCRM_Integration_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDC eCRM Integration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>