force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>