force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Siebel_BA_Id__c.field-meta.xml
<CustomField>
    <fullName>Siebel_BA_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Siebel BA Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>