force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Siebel_Contact__c.field-meta.xml
<CustomField>
    <fullName>Siebel_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Siebel Contact #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>