force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Siebel_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Siebel_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Siebel Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>