force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>