force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store</label>
    <length>5</length>
    <type>Text</type>
</CustomField>