force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/TAN_Number__c.field-meta.xml
<CustomField>
    <fullName>TAN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>