force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Taxable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Taxable Flag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>