force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/TL_OLM__c.field-meta.xml
<CustomField>
    <fullName>TL_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TL OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>