force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Usage_Base__c.field-meta.xml
<CustomField>
    <fullName>Usage_Base__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Usage Base</label>
    <length>5</length>
    <type>Text</type>
</CustomField>