force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/VAN_BA_Account__c.field-meta.xml
<CustomField>
    <fullName>VAN_BA_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VAN BA Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>