force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Vertical_Segment__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vertical Segment</label>
    <length>22</length>
    <type>Text</type>
</CustomField>