force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/VIP_Code__c.field-meta.xml
<CustomField>
    <fullName>VIP_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIP Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>