force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/VRM_OLM__c.field-meta.xml
<CustomField>
    <fullName>VRM_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VRM OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>